2008-01-08  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/34476
	* expr.c (find_array_element): Check that the array bounds are
	constant before using them.  Use lower, as well as upper bound.
	(check_restricted): Allow implied index variable.

2008-01-08  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/34476
	* gfortran.dg/parameter_array_init_3.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@131396 138bc75d-0d04-0410-961f-82ee72b054a4